<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PostJournal">

    <ImageView
        android:id="@+id/image_platform"
        android:layout_width="381dp"
        android:layout_height="289dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/background_scenic3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="180dp"
        android:layout_height="76dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textColor="@color/end_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/load_image"
        android:layout_width="143dp"
        android:layout_height="99dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_platform"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/Title"
        android:layout_width="328dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Title :"
        android:background="@drawable/input_bg"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_platform" />

    <EditText
        android:id="@+id/Your_thoughts"
        android:layout_width="323dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/your_thoughts"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:background="@drawable/input_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <ImageButton
        android:id="@+id/goto_list"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_arrow_forward_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toEndOf="@+id/save_button" />

    <ProgressBar
        android:id="@+id/progressBar_postjournal"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

</androidx.constraintlayout.widget.ConstraintLayout>